# nand2tetris

./: Cargo.toml  Fill.asm  README.md  index.html  life-128-hibit.hack  nand2tetris-733c4b08100491e0.js  nand2tetris-733c4b08100491e0_bg.wasm  nand2tetris-92daae9650b005.js  nand2tetris-92daae9650b005_bg.wasm  nand2tetris-ad70aa91f10a9680.js  nand2tetris-ad70aa91f10a9680_bg.wasm  nand2tetris-e43a59d0746818ba.js  nand2tetris-e43a59d0746818ba_bg.wasm  nand2tetris.js  r_asm.hack  r_min.hack  r_shift.hack  r_shift_soj.hack  r_soj.hack
.github/workflows/: deploy.yml
2048/: Main.vm  Rectangle.vm  RectangleState.vm
Raymarcher/: CalcPixel.vm  CameraMatrix.vm  Float316.vm  Parameters.vm  TwoToThePower.vm
Raytracer/: DirectionalLight.vm  Element.vm  Int32.vm  Intersection.vm  Main.vm  Number.vm  Plane.vm  Ray.vm  Scene.vm  Sphere.vm  Vec3.vm
VmTest/: Dither.vm  ImageRenderer.vm  Main.vm  RayMarcher.vm  Scene.vm  Surface.vm  UtilsFloat.vm  UtilsVec.vm  Vec3.vm
assets/: manifest.json  sw.js
eframe_template/src/: app.rs  lib.rs
hackenstein3DVM/: Keyboard.vm  Math.vm  Memory.vm  Output.vm  Screen.vm  String.vm
src/: any_wasm.rs  characters.rs  hack_to_wasm.rs  hardware.rs  hardware_parse.rs  lib.rs  main.rs  os.rs  parse_utils.rs  vm.rs  vm_parse.rs  vm_to_wasm.rs  wasm_hardware.rs  wasm_utils.rs  wasm_vm.rs  wasm_vm2.rs
src/emulator/: common_reducer.rs  common_state.rs  hardware_reducer.rs  hardware_state.rs  hardware_ui.rs  instant.rs  mod.rs  shared_ui.rs  vm_reducer.rs  vm_state.rs  vm_ui.rs
