[package]
description = "Rust tools for the nand2tetris course"
name = "nand2tetris"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ashdnazg/nand2tetris"
readme = "README.md"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", optional = true }
egui_extras = { version = "0.21.0", optional = true }
nom = "7.1.3"
hashbrown = "0.13.2"
egui_glow = { version = "0.21.0", optional = true }
glow = { version = "0.12", optional = true }
rfd = { version = "0.11.2", optional = true }

[profile.release]
debug = true

[features]
default = ["emulator"]
emulator = ["dep:eframe", "dep:egui_extras", "dep:egui_glow", "dep:glow", "dep:rfd"]

[[bin]]
name = "emulator"
required-features = ["emulator"]
