[package]
description = "Rust tools for the nand2tetris course"
name = "nand2tetris"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ashdnazg/nand2tetris"
readme = "README.md"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26.2", optional = true, features = ["glow"] }
egui_extras = { version = "0.26.2", optional = true }
nom = "7.1.3"
hashbrown = "0.14.3"
rfd = { version = "0.13.0", optional = true }
include_dir = "0.7.3"
futures = "0.3.30"

[profile.release]
debug = true

[features]
default = ["emulator"]
emulator = ["dep:eframe", "dep:egui_extras", "dep:rfd"]

[[bin]]
name = "nand2tetris"
required-features = ["emulator"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-bindgen = "0.2.90"
